# phoenix-main

./: .env.example  .env.production.example  .gitignore  DEPLOY.md  Makefile  README.md  STARTUP.md  docker-compose.prod.yml  docker-compose.yml  run_all_tests.sh  start-services.sh
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_create_users_table.py  002_create_persons_and_memorial_pages.py  003_create_media_table.py  004_create_moderation_tasks_table.py  005_create_memory_objects_table.py  006_create_qr_codes_tables.py  007_create_organizations_tables.py  009_moderation_platform.py  010_genealogy.py  011_analytics.py  012_org_roles_and_project_location.py  013_add_org_project_id_to_pages.py  014_extended_page_model.py  0f0780efffd1_add_is_primary_to_media.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/auth/: __init__.py  dependencies.py  org_rbac.py  schemas.py  security.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: __init__.py  base.py  init_db.py  session.py
apps/api/app/models/: __init__.py  analytics.py  genealogy.py  media.py  memorial_page.py  memory_object.py  moderation.py  organization.py  page_content.py  person.py  qr_code.py  user.py
apps/api/app/services/: __init__.py  analytics_service.py  audit_service.py  claim_service.py  graph_service.py  map_service.py  media_service.py  memory_object_service.py  moderation_service.py  org_service.py  page_content_service.py  page_service.py  (+2 more)
apps/api/tests/: conftest.py  test_analytics.py  test_auth.py  test_genealogy.py  test_health.py  test_map.py  test_media.py  test_moderation.py  test_moderation_platform.py  test_objects.py  test_orgs.py  test_pages.py  test_qr.py  test_service_contracts.py
(+264 files in other folders)
